Use Stream.toList directly